# software-kit-for-qualcomm-cloud-ai-100-cc

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
cmake/: compiler_warnings.cmake
docs/: QAICProgramConfig.txt
examples/: CMakeLists.txt
examples/barebones_app/: BarebonesApp.cpp  BarebonesAppLib.cpp  BarebonesAppLib.h  CMakeLists.txt  barebones.json
examples/multicast_example/: CMakeLists.txt  Multicast.cpp  MulticastLib.cpp  MulticastLib.h  README  expected_output.txt  input1.txt  input2.txt  multicast.json
examples/simple_io/: CMakeLists.txt  README  SimpleIO.cpp  SimpleIOLib.cpp  SimpleIOLib.h  buffer1.txt  buffer2.txt  expected_output.txt  simpleio.json
lib/: CMakeLists.txt
lib/driver/: CMakeLists.txt  Driver.cpp  Driver.h  DriverAction.cpp  DriverAction.h  DriverContext.cpp  DriverContext.h  DriverOptions.cpp  DriverOptions.h  DriverOptions.td
lib/metadata/: CMakeLists.txt
lib/metadata/execContext/: CMakeLists.txt
lib/metadata/execContext/deps-generated/: execContext.schema.json  execContextGenerated_32bitPointers.h
lib/metadata/execContext/deps-generated/firmware/: execContext_builder.h  execContext_reader.h  execContext_verifier.h  flatbuffers_common_builder.h  flatbuffers_common_reader.h
lib/metadata/execContext/deps-generated/flatbuffers/: execContext_generated.h
lib/metadata/execContext/include/: execContextWriter.hpp  intermediate_schema.h
lib/metadata/execContext/include/qsm/: execContext_C_Decoder.h
lib/metadata/execContext/scripts/: generateHeader.py  generateSchemaCode.sh  obtainDependencies.sh
lib/metadata/execContext/src/: execContext.fbs
lib/metadata/metadata-common/: CMakeLists.txt
lib/metadata/metadata-common/inc/: AICMetadata.h  AICMetadataExecCtx.h  AICMetadataReader.h  AICMetadataWriter.h  nnc_err_inf.h  nnc_mmap_inf.h  nnc_pmu_inf.h  nnc_port_inf.h  nnc_reprog_mcid_inf.h  nnc_rtld_inf.h  nnc_udma_inf.h  nnc_ulog_inf.h
lib/metadata/metadata-common/src/: AICMetadata.c  AICMetadataReader.c  AICMetadataWriter.cpp
lib/metadata/metadata-flatbuffer/: CMakeLists.txt
lib/metadata/metadata-flatbuffer/include/: AICMetadata.hpp  CompressL2TCMInitState.h  metadataFlatbufferWriter.h  metadata_flat_knownFields.h  metadataflatbufDecode.hpp  metadataflatbufEncode.hpp
lib/metadata/metadata-flatbuffer/src/: AicMetadataFlat.fbs  metadataFlatbufferWriter.cpp
lib/networkdesc/: CMakeLists.txt
lib/networkdesc/proto/: AICNetworkDesc.proto  CMakeLists.txt
lib/networkdesc/qpc/inc/: QAicQpc.h
lib/networkdesc/qpc/src/: QAicQpc.cpp
lib/program/: CMakeLists.txt  Program.cpp  Program.h  ProgramConfig.cpp  ProgramConfig.h  ProgramConfig.proto  ProgramDesc.h  QPCBuilder.cpp  QPCBuilder.h
lib/support/: CMakeLists.txt  Debug.cpp  Debug.h  Path.cpp  Path.h  StringList.cpp  StringList.h
lib/toolchain/: Ar.cpp  Ar.h  CMakeLists.txt  Compiler.cpp  Compiler.h  Linker.cpp  Linker.h  ObjCopy.cpp  ObjCopy.h  ToolBase.cpp  ToolBase.h  Tools.cpp  Tools.h
runtime/lib/: AICDefsInternal.h  BufferDesc.cpp  BufferDesc.h  CMakeLists.txt  ComputeAPI.cpp  ComputeAPI.h  Exit.cpp  Exit.h  NSPContext.cpp  NSPContext.h  SerializedProgramDesc.cpp  SerializedProgramDesc.h  _qaic_start.cpp
runtime/lib/libdev/: libdev_assert.h  libdev_defs.h  libdev_interface.cpp  libdev_interface.h  libdev_udma.cpp  os-dbg.h  os-inlines.h  os.h  os_common.cpp  os_hexagon.cpp
scripts/: build.sh  clang-format.sh  test_examples.sh
test/unittest/: CMakeLists.txt  CompilerTests.cpp  DriverTests.cpp  PathTests.cpp  ProgramTests.cpp  QPCBuilderTests.cpp  StringListTests.cpp  ToolchainToolsTest.cpp  example_config.json  qpc_segment_data.txt  test_program.json
test/unittest/mock_tools/hexagon/: clang  clang++  llvm-ar  llvm-link  llvm-objcopy
test/unittest/mock_tools/other/: cc  cxx  link
thirdparty-modules/: CMakeLists.txt
toolchain/: CMakeLists.txt  qaic.cmake.in
toolchain/test/: BarebonesConfig.json.in  BarebonesTest.cpp.in  BarebonesTestLib.cpp.in  CMakeLists.txt  CmakeToolchainTest.cpp
tools/: CMakeLists.txt
tools/qaic-binutils/: CMakeLists.txt  qaic-ar  qaic-nm  qaic-ranlib  qaic-size
tools/qaic-cc/: CMakeLists.txt  qaic-cc.cpp
tools/qaic-objcopy/: CMakeLists.txt  qaic-objcopy.cpp
